# llm_client

./: .gitignore  AGENTS.md  BACKLOG.md  BRIAN_READTHIS.md  CHANGELOG.md  CHATGPT_ADVISORY_CONTEXT.md  CLAUDE.md  ISSUES.md  KNOWLEDGE.md  LLM_MODELS.md  Makefile  README.md  dead_code_audit.json  llm_client_mcp_server.py  meta-process.yaml  pyproject.toml
.claude/: active-work.yaml  settings.json
.claude/hooks/: check-references-reviewed.sh  gate-edit.sh  post-edit-quiz.sh  track-reads.sh
.claude/sessions/: DESKTOP-79G7E9D-3554819.session  DESKTOP-79G7E9D-3656142.session  DESKTOP-79G7E9D-3667467.session  DESKTOP-79G7E9D-4042688.session  DESKTOP-79G7E9D-sse-51547.session
.github/workflows/: smoke-observability.yml
.openclaw/: success-criteria.yaml
docs/: API_REFERENCE.html  API_REFERENCE.md  CHATGPT_REVIEW_STATUS_2026-02-22.md  CHATGPT_REVIEW_STATUS_2026-02-23.md  CLAUDE.md  ECOSYSTEM_TOP_DOWN_ARCHITECTURE.md  ECOSYSTEM_UNCERTAINTIES.md  HANDOFF.md  LOCAL_MODEL_PARITY_V0.md  PROMPT_ASSET_LAYER.md  PUBLIC_SURFACE_AUDIT.md  REQUIREMENTS.md  TASK_GRAPH_DESIGN.md  WEEK1_CONTRACT_STABILIZATION.md
docs/adr/: 0001-model-identity-v0.md  (+22 more)
enforced_planning/: push_safety.py
hooks/: CLAUDE.md  pre-commit  pre-push
llm_client/: CLAUDE.md  __init__.py  __main__.py  agent_adoption.py  agent_artifacts.py  agent_contracts.py  agent_disclosure.py  agent_outcomes.py  agent_spec.py  agents.py  agents_claude.py  agents_codex.py  agents_codex_process.py  agents_codex_runtime.py  analyzer.py  background_runtime.py  batch_runtime.py  call_contracts.py  call_lifecycle.py  call_wrappers.py  client.py  client_dispatch.py  completion_runtime.py  compliance_gate.py  config.py  context_budget.py  cost_utils.py  data_types.py  deferred_tools.py  difficulty.py  embedding_runtime.py  errors.py  execution_kernel.py  experiment_eval.py  experiment_summary.py  foundation.py  git_utils.py  io_log.py  langfuse_callbacks.py  litellm_observer_callback.py  (+44 more)
rubrics/: code_quality.yaml  extraction_quality.yaml  research_quality.yaml  summary_quality.yaml
scripts/: CLAUDE.md  adoption_gate.sh  adoption_probe.sh  check_doc_coupling.py  check_model_policy.py  check_required_reading.py  doc_coupling.yaml  inferred_deps.json  log_maintenance.py  relationships.yaml  study_gemini_schema_behavior.py
tests/: CLAUDE.md  conftest.py  integration_long_thinking_smoke_test.py  integration_test.py  test_agent_adoption.py  test_agent_artifacts.py  test_agent_contracts.py  test_agent_disclosure.py  test_agent_outcomes.py  test_agent_planning.py  test_agent_runtime_adapters.py  test_agent_spec.py  test_agents.py  test_analyzer.py  test_api_reference_generation.py  test_batch_progress.py  test_boundary_schemas.py  test_call_contracts.py  test_cli_adoption.py  test_cli_experiments.py  test_cli_replay.py  test_cli_smoke.py  test_cli_tool_lint.py  test_client.py  test_client_lifecycle.py  test_client_lifecycle_monitor.py  test_context_budget.py  test_deferred_tools.py  test_difficulty.py  test_error_budget.py  test_errors.py  test_evidence_spans.py  test_execution_kernel.py  test_experiment_eval.py  test_experiment_log.py  test_experiment_summary.py  test_foundation.py  test_gate_edit_hook_integration.py  test_gemini_native.py  test_gemini_schema_behavior_study.py  (+46 more)
(+216 files in other folders)
