[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.7.0"
description = "Runtime substrate for multi-provider LLM calls, observability, budgets, and agent routing."
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.81.3",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
structured = ["instructor>=1.14.0"]
workflow = ["langgraph>=1.1.3"]
agents = ["claude-agent-sdk>=0.1.30"]
codex = ["openai-codex-sdk>=0.1.11"]
mcp = ["mcp>=1.0.0"]
langfuse = ["langfuse>=2.0"]
all-agents = ["claude-agent-sdk>=0.1.30", "openai-codex-sdk>=0.1.11"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "instructor>=1.14.0",
    "langgraph>=1.1.3",
]

[project.scripts]
llm-cost = "llm_client.__main__:main"

[tool.setuptools.packages.find]
include = ["llm_client*"]

[tool.setuptools.package-data]
llm_client = ["prompts/*.yaml", "prompt_assets/**/*.yaml", "data/*.json"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: tests that call external APIs and require LLM_CLIENT_INTEGRATION=1",
]
